--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </iframe>
             </li>
             <li>
-                Sound Designer and Soundtrack Composer for "Melati" (2019)
+                Offline Editor Assistant, Sound Designer and Soundtrack Composer for "Melati" (2019)
                 <br>
                 <iframe width="420" height="236" src="https://www.youtube.com/embed/Ha2kEt6IlKU" 
                     title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
@@ -182,6 +182,10 @@
                     <i class="fab fa-youtube"></i> YouTube
                 </a>
             </li>
+            <li>
+                <a href="https://tiktok.com/@vengenz21" target="_blank">
+                    <i class="fa-brands fa-tiktok"></i> TikTok
+                </a>
         </ul>
     </section>
 
